[package]
name = "iced-pancurses"
version = "0.1.2"
license = "MIT"
authors = ["Olivier Pinon <oliv.pinon@gmail.com>"]
description = "Toy renderer for iced based on pancurses"
homepage = "https://github.com/AlisCode/iced-pancurses"
repository = "https://github.com/AlisCode/iced-pancurses"
edition = "2018"
keywords= ["gui", "iced", "pancurses", "ncurses", "tui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3", features = ["thread-pool"] }
iced_core = "0.3.0"
iced_native = "0.3.0"
terminal = "0.2.1"

[dev-dependencies]
futures = "0.3"
async-std = { version = "1.3", features = ["unstable"] }
surf = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.7"